Fix modal heading weight and button letter spacing

--- a/utils/gear-ui/src/components/Button/Button.module.scss
+++ b/utils/gear-ui/src/components/Button/Button.module.scss
@@ -15,6 +15,7 @@
   align-items: center;
   justify-content: center;
   font-weight: 600;
+  letter-spacing: 0.08em;
   color: $textColor;
   border-radius: $borderRadiusLarge;
 
